Send mainstream formats to navigation views

--- a/app/views/taxons/_child_taxons_list.html.erb
+++ b/app/views/taxons/_child_taxons_list.html.erb
@@ -22,6 +22,7 @@
                   <%= render partial: 'content_list_for_child_taxon', locals: {
                       section_index: index,
                       tagged_content: taxon.tagged_content,
+                      mainstream_formats: mainstream_formats
                   } %>
                 </div>
               </div>
