--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,10 @@ p {
   margin-top: pem(5, 16);
   margin-bottom: pem(20, 16);
 }
+
+.taxon-page .subsection .subsection-list {
+  &.high-volume {
+    border-left: 5px solid $govuk-blue;
+    padding-left: $gutter-one-third;
+  }
+}
