--- a/app/views/taxons/_content_list_for_child_taxon.html.erb
+++ b/app/views/taxons/_content_list_for_child_taxon.html.erb
@@ -1,9 +1,24 @@
+<%# loop once for HVC %>
+<ol class="subsection-list high-volume">
+  <% tagged_content.each_with_index do |content_item, index| %>
+    <% if mainstream_formats.include? content_item.content_store_document_type %>
+      <li class="subsection-list-item">
+        <%= link_to(content_item.title, content_item.base_path) %>
+
+        <p><%= content_item.description %></p>
+      </li>
+    <% end %>
+  <% end %>
+</ol>
+<%# and again for regular content %>
 <ol class="subsection-list">
   <% tagged_content.each_with_index do |content_item, index| %>
+    <% unless mainstream_formats.include? content_item.content_store_document_type %>
     <li class="subsection-list-item">
       <%= link_to(content_item.title, content_item.base_path) %>
 
       <p><%= content_item.description %></p>
     </li>
+    <% end %>
   <% end %>
 </ol>
