--- a/app/views/taxons/show.html.erb
+++ b/app/views/taxons/show.html.erb
@@ -22,7 +22,8 @@
   <% if taxon.children? %>
     <%= render partial: 'child_taxons_list', locals: {
       accordion_content: taxon_overview_and_child_taxons(taxon),
-      mainstream_formats: mainstream_formats
+      mainstream_formats: mainstream_formats,
+      mainstream_content: mainstream_content(taxon)
     } %>
   <% else %>
     <%= render partial: 'content_list_for_current_taxon', locals: {
