Change heading again.
“Most viewed” is less contentious and more descriptive of what the box actually is

--- a/app/views/taxons/_child_taxons_list.html.erb
+++ b/app/views/taxons/_child_taxons_list.html.erb
@@ -2,7 +2,7 @@
 <div class="grid-row">
   <div class="column-two-thirds">
     <div class="high-volume">
-      <h2>Popular guidance in this topic</h2>
+      <h2>Most viewed in this topic</h2>
       <ol>
         <% mainstream_content.each do |content_item| %>
           <li><%= link_to(content_item.title, content_item.base_path) %></li>
