Move high volume callout to partial

--- a/app/views/taxons/_child_taxons_list.html.erb
+++ b/app/views/taxons/_child_taxons_list.html.erb
@@ -1,14 +1,7 @@
 <% if mainstream_content.present? %>
 <div class="grid-row">
   <div class="column-two-thirds">
-    <div class="high-volume">
-      <h2>Most viewed in this topic</h2>
-      <ol>
-        <% mainstream_content.each do |content_item| %>
-          <li><%= link_to(content_item.title, content_item.base_path) %></li>
-        <% end %>
-      </ol>
-    </div>
+    <%= render partial: 'high-volume', locals: { mainstream_content: mainstream_content } %>
   </div>
 </div>
 <% end %>
