--- a/app/views/taxons/show.html.erb
+++ b/app/views/taxons/show.html.erb
@@ -29,7 +29,8 @@
     <%= render partial: 'content_list_for_current_taxon', locals: {
       taxon: taxon,
       tagged_content: taxon.tagged_content,
-      mainstream_formats: mainstream_formats
+      mainstream_formats: mainstream_formats,
+      mainstream_content: mainstream_content(taxon)
     } %>
   <% end %>
 <% end %>
