Send nil value to partial to stop errors

--- a/app/views/taxons/show.html.erb
+++ b/app/views/taxons/show.html.erb
@@ -16,7 +16,8 @@
     taxon: taxon,
     tagged_content: taxon.tagged_content,
     is_grid: true,
-    mainstream_formats: mainstream_formats
+    mainstream_formats: mainstream_formats,
+    mainstream_content: nil
   } %>
 <% else %>
   <% if taxon.children? %>
