SPIKE: Investigate shunting taxonomy up by one level

--- a/app/views/taxons/_content_list_for_child_taxon.html.erb
+++ b/app/views/taxons/_content_list_for_child_taxon.html.erb
@@ -1,9 +1,23 @@
-<ol class="subsection-list">
-  <% tagged_content.each_with_index do |content_item, index| %>
-    <li class="subsection-list-item">
-      <%= link_to(content_item.title, content_item.base_path) %>
+<% if taxon.tagged_content.any? %>
+  <ul class="subsection-list">
+    <% taxon.tagged_content.each do |content_item| %>
+      <li class="subsection-list-item">
+        <%= link_to(content_item.title, content_item.base_path) %>
 
-      <p><%= content_item.description %></p>
-    </li>
-  <% end %>
-</ol>
+        <p><%= content_item.description %></p>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
+<% taxon.child_taxons.each do |child_taxon| %>
+  <h3><%= child_taxon.title %></h3>
+  <ul class="subsection-list-item">
+    <% child_taxon.tagged_content.each do |content_item| %>
+      <li class="subsection-list-item">
+        <%= link_to(content_item.title, content_item.base_path) %>
+
+        <p><%= content_item.description %></p>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
