--- a/app/views/taxons/accordion.html.erb
+++ b/app/views/taxons/accordion.html.erb
@@ -36,7 +36,7 @@
                   <% end %>
                   <%= render partial: 'content_list_for_child_taxon', locals: {
                       section_index: index,
-                      tagged_content: taxon.tagged_content,
+                      taxon: taxon,
                   } %>
                 </div>
               </div>
